# cookiecutter-musketeers-python

./: .gitignore  Dockerfile  Makefile  README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{ cookiecutter.directory_name }}/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
{{ cookiecutter.directory_name }}/app/: __init__.py  db.py  environment.py  main.py
{{ cookiecutter.directory_name }}/app/models/: __init__.py
{{ cookiecutter.directory_name }}/app/schemas/: __init__.py
{{ cookiecutter.directory_name }}/app/tests/: __init__.py  conftest.py
{{ cookiecutter.directory_name }}/app/views/: __init__.py
{{ cookiecutter.directory_name }}/docker/: entrypoint.sh  gunicorn.sh
{{ cookiecutter.directory_name }}/environments/: local.env  test.env
{{ cookiecutter.directory_name }}/migrations/: env.py
